8.2
  - improved reset detection

8.1
  - use new gatt api where available
  - fixed possible error while reading values via bluetooth

7.8
  - fixed Google Fit login

7.7
  - allow export of application log

7.6
  - let speed, strokerate and power drop to 0 when idle
  - improved power calculation

7.5
  - updated ANT+ library for Android 10
  - filter workouts for selected program
  
7.4
  - fixed file access on Android Q

7.3
  - notify on low battery of bluetooth devices
  - sort programs by name

7.2
  - fixed premature ending of workout with 1.x revision of ComModule

7.1
  - reimplemented Google Fit access
  - read power in tcx import

7.0
  - write trace for bluetooth rower
  - fixed invalid reading via bluetooth at 60 minutes

6.9
  - fixed measurement of durations longer than 60 minutes

6.8
  - reset rower via bluetooth
  - fixed values of snapshot axis

6.7
  - another fix for premature ending of workout :/

6.6
  - duplicate programs
  - duplicate segments
  - reorder segments

6.5
  - fixed Google Fit export

6.4
  - improved (broken) Google Fit export
  - remember share intent for automatic export

6.3
  - fixed premature ending of rowing when adjusting energy

6.2
  - support bluetooth rower connection

6.1
  - support bluetooth device selection
  - revamped charts

6.0
  - support picture-in-picture

5.9
  - export with artificial locations, by default River Thames

5.8
  - fixed calendar export

5.7
  - don't repeat segment limit when pausing
  - record power and export to TCX

5.6
  - fixed performance regression

5.3
  - support external storage location
  - improved number display
  - arabic numerals
  - allow 5 and 15 strokes target

5.2
  - allow explicit connect to a device as workaround for Sony devices

5.1
  - fixed crash when selecting workout as challenge
  - fixed bug increasing database size excessively
  - remove unnecessary data from database